sqlg-doc/docs/2.1.6/include/dataTypes.adoc
== Data types

.Table Data types
|===
|Java |Postgresql |HSQLDB |H2 |MariaDB | MSSqlServer

|Boolean
|BOOLEAN
|BOOLEAN
|BOOLEAN
|BOOLEAN
|BIT

|Byte
|*Not supported*
|TINYINT
|TINYINT
|TINYINT
|TINYINT

|Short
|SMALLINT
|SMALLINT
|SMALLINT
|SMALLINT
|SMALLINT

|Integer
|INTEGER
|INTEGER
|INT
|INTEGER
|INT

|Long
|BIGINT
|BIGINT
|BIGINT
|BIGINT
|BIGINT

|Float
|REAL
|*Not supported*
|REAL
|*Not supported*
|REAL

|Double
|DOUBLE PRECISION
|DOUBLE
|DOUBLE
|DOUBLE
|DOUBLE PRECISION

|String
|TEXT
|LONGVARCHAR
|VARCHAR
|LONGTEXT
|VARCHAR(2000)

|String (fixed length)
|VARCHAR(x)
|VARCHAR(x)
|VARCHAR(x)
|VARCHAR(x)
|VARCHAR(x)

|Boolean[]
|BOOLEAN[]
|BOOLEAN ARRAY DEFAULT ARRAY[]
|ARRAY
|BOOLEAN ARRAY DEFAULT ARRAY[]
|*Not supported*

|Byte[]
|BYTEA
|LONGVARBINARY
|BINARY
|BLOB
|VARBINARY(max)

|Short[]
|SMALLINT[]
|SMALLINT ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|Integer[]
|INTEGER[]
|INTEGER ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|Long[]
|BIGINT[]
|BIGINT ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|Float[]
|REAL[]
|*Not supported*
|ARRAY
|*Not supported*
|*Not supported*

|Double[]
|DOUBLE PRECISION[]
|DOUBLE ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|String[]
|TEXT[]
|LONGVARCHAR ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|java.time.LocalDateTime
|TIMESTAMP
|TIMESTAMP
|TIMESTAMP
|DATETIME(3)
|DATETIME2(3)

|java.time.LocalDate
|DATE
|DATE
|DATE
|DATE
|DATE

|java.time.LocalTime
|TIME
|TIME
|TIME
|TIME
|TIME

|java.time.ZonedDateTime
|TIMESTAMP, TEXT
|TIMESTAMP, LONGVARCHAR
|TIMESTAMP, VARCHAR
|DATETIME(3), TINYTEXT
|DATETIME2(3), VARCHAR(255)

|java.time.Period
|INTEGER, INTEGER, INTEGER
|INTEGER, INTEGER, INTEGER
|INT, INT, INT
|INTEGER, INTEGER, INTEGER
|INT, INT, INT

|java.time.Duration
|BIGINT, INTEGER
|BIGINT, INTEGER
|BIGINT, INT
|BIGINT, INTEGER
|BIGINT, INT

|java.time.LocalDateTime[]
|TIMESTAMP[]
|TIMESTAMP ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|java.time.LocalDate[]
|DATE[]
|DATE ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|java.time.LocalTime[]
|TIME[]
|TIME ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|java.time.ZonedDateTime[]
|TIMESTAMP[], TEXT[]
|TIMESTAMP ARRAY DEFAULT ARRAY[], LONGVARCHAR ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|java.time.Period[]
|INTEGER[], INTEGER[], INTEGER[]
|INTEGER ARRAY DEFAULT ARRAY[], INTEGER ARRAY DEFAULT ARRAY[], INTEGER ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|java.time.Duration[]
|BIGINT[], INTEGER[]
|BIGINT ARRAY DEFAULT ARRAY[], INTEGER ARRAY DEFAULT ARRAY[]
|ARRAY
|*Not supported*
|*Not supported*

|com.fasterxml.jackson.databind.JsonNode
|JSONB
|LONGVARCHAR
|VARCHAR
|LONGTEXT
|VARCHAR(max)

|com.fasterxml.jackson.databind.JsonNode[]
|JSONB[]
|ARRAY
|ARRAY
|*Not supported*
|*Not supported*

|org.postgis.Point
|geometry(POINT)
|*Not supported*
|*Not supported*
|*Not supported*
|*Not supported*

|org.umlg.sqlg.gis.GeographyPoint
|geography(POINT, 4326)
|*Not supported*
|*Not supported*
|*Not supported*
|*Not supported*

|org.postgis.LineString
|geometry(LINESTRING)
|*Not supported*
|*Not supported*
|*Not supported*
|*Not supported*

|org.postgis.Polygon
|geometry(POLYGON)
|*Not supported*
|*Not supported*
|*Not supported*
|*Not supported*

|org.umlg.sqlg.gis.GeographyPolygon
|geography(POLYGON, 4326)
|*Not supported*
|*Not supported*
|*Not supported*
|*Not supported*
|===

[NOTE]
`java.time.LocalTime` drops the nano second precision.